--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ body {
         font-size: 1.5rem;
     }
     .canvas {
-        padding: 2rem 3rem;
+        padding: 3rem;
     }
     .new-game {
         font-size: 1rem;
